// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PatchBuilder SchemaPatch metadata detects default value change 1`] = `
[
  {
    "fieldName": "field",
    "patch": {
      "op": "replace",
      "path": "/properties/field",
      "value": {
        "default": "modified",
        "type": "string",
      },
    },
    "propertyChanges": [
      {
        "from": "initial",
        "property": "default",
        "to": "modified",
      },
    ],
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder SchemaPatch metadata detects deprecated change 1`] = `
[
  {
    "fieldName": "field",
    "patch": {
      "op": "replace",
      "path": "/properties/field",
      "value": {
        "default": "",
        "deprecated": true,
        "type": "string",
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "deprecated",
        "to": true,
      },
    ],
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder SchemaPatch metadata detects description change 1`] = `
[
  {
    "fieldName": "field",
    "patch": {
      "op": "replace",
      "path": "/properties/field",
      "value": {
        "default": "",
        "description": "new description",
        "type": "string",
      },
    },
    "propertyChanges": [
      {
        "from": "old description",
        "property": "description",
        "to": "new description",
      },
    ],
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder SchemaPatch metadata detects foreignKey addition 1`] = `
[
  {
    "fieldName": "field",
    "patch": {
      "op": "replace",
      "path": "/properties/field",
      "value": {
        "default": "",
        "foreignKey": "users",
        "type": "string",
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "foreignKey",
        "to": "users",
      },
    ],
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder SchemaPatch metadata detects foreignKey change 1`] = `
[
  {
    "fieldName": "field",
    "patch": {
      "op": "replace",
      "path": "/properties/field",
      "value": {
        "default": "",
        "foreignKey": "categories",
        "type": "string",
      },
    },
    "propertyChanges": [
      {
        "from": "users",
        "property": "foreignKey",
        "to": "categories",
      },
    ],
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder SchemaPatch metadata detects foreignKey removal 1`] = `
[
  {
    "fieldName": "field",
    "patch": {
      "op": "replace",
      "path": "/properties/field",
      "value": {
        "default": "",
        "type": "string",
      },
    },
    "propertyChanges": [
      {
        "from": "users",
        "property": "foreignKey",
        "to": undefined,
      },
    ],
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder SchemaPatch metadata detects formula addition 1`] = `
[
  {
    "fieldName": "field",
    "patch": {
      "op": "replace",
      "path": "/properties/field",
      "value": {
        "default": 0,
        "readOnly": true,
        "type": "number",
        "x-formula": {
          "expression": "value * 2",
          "version": 1,
        },
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "formula",
        "to": "value * 2",
      },
    ],
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder SchemaPatch metadata detects formula removal 1`] = `
[
  {
    "fieldName": "computed",
    "patch": {
      "op": "replace",
      "path": "/properties/computed",
      "value": {
        "default": 0,
        "type": "number",
      },
    },
    "propertyChanges": [
      {
        "from": "value * 2",
        "property": "formula",
        "to": undefined,
      },
    ],
    "typeChange": undefined,
  },
]
`;

exports[`PatchBuilder SchemaPatch metadata detects type change from string to number 1`] = `
[
  {
    "fieldName": "field",
    "patch": {
      "op": "replace",
      "path": "/properties/field",
      "value": {
        "default": 0,
        "type": "number",
      },
    },
    "propertyChanges": [],
    "typeChange": {
      "fromType": "string",
      "toType": "number",
    },
  },
]
`;

exports[`PatchBuilder SchemaPatch metadata marks move as rename when parent is same 1`] = `
[
  {
    "fieldName": "newName",
    "isRename": true,
    "movesIntoArray": undefined,
    "patch": {
      "from": "/properties/oldName",
      "op": "move",
      "path": "/properties/newName",
    },
    "propertyChanges": [],
  },
]
`;

exports[`PatchBuilder add patch metadata includes default value in add patch when not standard 1`] = `
[
  {
    "fieldName": "field",
    "patch": {
      "op": "add",
      "path": "/properties/field",
      "value": {
        "default": "my default",
        "type": "string",
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "default",
        "to": "my default",
      },
    ],
  },
]
`;

exports[`PatchBuilder add patch metadata includes deprecated in add patch when field is deprecated 1`] = `
[
  {
    "fieldName": "field",
    "patch": {
      "op": "add",
      "path": "/properties/field",
      "value": {
        "default": "",
        "deprecated": true,
        "type": "string",
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "deprecated",
        "to": true,
      },
    ],
  },
]
`;

exports[`PatchBuilder add patch metadata includes description in add patch when field has description 1`] = `
[
  {
    "fieldName": "field",
    "patch": {
      "op": "add",
      "path": "/properties/field",
      "value": {
        "default": "",
        "description": "My description",
        "type": "string",
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "description",
        "to": "My description",
      },
    ],
  },
]
`;

exports[`PatchBuilder add patch metadata includes foreignKey in add patch when field has foreignKey 1`] = `
[
  {
    "fieldName": "categoryId",
    "patch": {
      "op": "add",
      "path": "/properties/categoryId",
      "value": {
        "default": "",
        "foreignKey": "categories",
        "type": "string",
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "foreignKey",
        "to": "categories",
      },
    ],
  },
]
`;

exports[`PatchBuilder add patch metadata includes formula in add patch when field has formula 1`] = `
[
  {
    "fieldName": "computed",
    "patch": {
      "op": "add",
      "path": "/properties/computed",
      "value": {
        "default": 0,
        "readOnly": true,
        "type": "number",
        "x-formula": {
          "expression": "value * 2",
          "version": 1,
        },
      },
    },
    "propertyChanges": [
      {
        "from": undefined,
        "property": "formula",
        "to": "value * 2",
      },
    ],
  },
]
`;
